--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -59,6 +59,30 @@
     transition: background-color 0.2s;
 }
 
+
+.countdownButton:not(:disabled):hover {
+    background: var(--blue-dark);
+}
+
 .countdownButton:hover {
     background: var(--blue-dark);
 }
+
+.countdownButtonActive {
+    background: var(--white);
+    color: var(--title);
+}
+
+.countdownButtonActive:not(:disabled):hover {
+    background: var(--red);
+    color: var(--white);
+}
+
+.countdownButton:disabled {
+    background: var(--white);
+    color: var(--text);
+
+    cursor: not-allowed;
+}
+
+
